update video button

--- a/포트폴리오 페이지/index.html
+++ b/포트폴리오 페이지/index.html
@@ -200,29 +200,69 @@
           <div id="pagecopy" class="democontent content_select">
           </div>
           <div id="imageslider" class="democontent">
-            <video autoplay loop preload="auto" controls>
+            <video controls>
               <source src="./demo/imageslider.mp4" type="video/mp4">
             </video>
+            <div class="playpause play">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="play" x="0px" y="0px" viewBox="0 0 314.068 314.068" style="enable-background:new 0 0 314.068 314.068;" xml:space="preserve">
+                <path d="M293.002,78.53C249.646,3.435,153.618-22.296,78.529,21.068C3.434,64.418-22.298,160.442,21.066,235.534     c43.35,75.095,139.375,100.83,214.465,57.47C310.627,249.639,336.371,153.62,293.002,78.53z M219.834,265.801     c-60.067,34.692-136.894,14.106-171.576-45.973C13.568,159.761,34.161,82.935,94.23,48.26     c60.071-34.69,136.894-14.106,171.578,45.971C300.493,154.307,279.906,231.117,219.834,265.801z M213.555,150.652l-82.214-47.949     c-7.492-4.374-13.535-0.877-13.493,7.789l0.421,95.174c0.038,8.664,6.155,12.191,13.669,7.851l81.585-47.103     C221.029,162.082,221.045,155.026,213.555,150.652z"/>
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="pause" x="0px" y="0px" viewBox="0 0 533.333 533.333" style="enable-background:new 0 0 533.333 533.333;" xml:space="preserve">
+                <path d="M266.667,0C119.391,0,0,119.391,0,266.667c0,147.275,119.391,266.666,266.667,266.666   c147.275,0,266.667-119.391,266.667-266.666C533.333,119.391,413.942,0,266.667,0z M266.667,483.333   C147.005,483.333,50,386.328,50,266.667C50,147.005,147.005,50,266.667,50c119.661,0,216.667,97.005,216.667,216.667   C483.333,386.328,386.328,483.333,266.667,483.333z M166.667,166.667h66.667v200h-66.667V166.667z M300,166.667h66.667v200H300   V166.667z"/>
+              </svg>
+            </div>
           </div>
-          <div id="modalgallery" class="democontent" controls>
-            <video autoplay loop preload="auto">
+          <div id="modalgallery" class="democontent">
+            <video controls>
               <source src="./demo/modalgallery.mp4" type="video/mp4">
             </video>
+            <div class="playpause play">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="play" x="0px" y="0px" viewBox="0 0 314.068 314.068" style="enable-background:new 0 0 314.068 314.068;" xml:space="preserve">
+                <path d="M293.002,78.53C249.646,3.435,153.618-22.296,78.529,21.068C3.434,64.418-22.298,160.442,21.066,235.534     c43.35,75.095,139.375,100.83,214.465,57.47C310.627,249.639,336.371,153.62,293.002,78.53z M219.834,265.801     c-60.067,34.692-136.894,14.106-171.576-45.973C13.568,159.761,34.161,82.935,94.23,48.26     c60.071-34.69,136.894-14.106,171.578,45.971C300.493,154.307,279.906,231.117,219.834,265.801z M213.555,150.652l-82.214-47.949     c-7.492-4.374-13.535-0.877-13.493,7.789l0.421,95.174c0.038,8.664,6.155,12.191,13.669,7.851l81.585-47.103     C221.029,162.082,221.045,155.026,213.555,150.652z"/>
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="pause" x="0px" y="0px" viewBox="0 0 533.333 533.333" style="enable-background:new 0 0 533.333 533.333;" xml:space="preserve">
+                <path d="M266.667,0C119.391,0,0,119.391,0,266.667c0,147.275,119.391,266.666,266.667,266.666   c147.275,0,266.667-119.391,266.667-266.666C533.333,119.391,413.942,0,266.667,0z M266.667,483.333   C147.005,483.333,50,386.328,50,266.667C50,147.005,147.005,50,266.667,50c119.661,0,216.667,97.005,216.667,216.667   C483.333,386.328,386.328,483.333,266.667,483.333z M166.667,166.667h66.667v200h-66.667V166.667z M300,166.667h66.667v200H300   V166.667z"/>
+              </svg>
+            </div>
           </div>
-          <div id="accordionmenu" class="democontent" controls>
-            <video autoplay loop preload="auto">
+          <div id="accordionmenu" class="democontent">
+            <video controls>
               <source src="./demo/accordionmenu.mp4" type="video/mp4">
             </video>
+            <div class="playpause play">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="play" x="0px" y="0px" viewBox="0 0 314.068 314.068" style="enable-background:new 0 0 314.068 314.068;" xml:space="preserve">
+                <path d="M293.002,78.53C249.646,3.435,153.618-22.296,78.529,21.068C3.434,64.418-22.298,160.442,21.066,235.534     c43.35,75.095,139.375,100.83,214.465,57.47C310.627,249.639,336.371,153.62,293.002,78.53z M219.834,265.801     c-60.067,34.692-136.894,14.106-171.576-45.973C13.568,159.761,34.161,82.935,94.23,48.26     c60.071-34.69,136.894-14.106,171.578,45.971C300.493,154.307,279.906,231.117,219.834,265.801z M213.555,150.652l-82.214-47.949     c-7.492-4.374-13.535-0.877-13.493,7.789l0.421,95.174c0.038,8.664,6.155,12.191,13.669,7.851l81.585-47.103     C221.029,162.082,221.045,155.026,213.555,150.652z"/>
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="pause" x="0px" y="0px" viewBox="0 0 533.333 533.333" style="enable-background:new 0 0 533.333 533.333;" xml:space="preserve">
+                <path d="M266.667,0C119.391,0,0,119.391,0,266.667c0,147.275,119.391,266.666,266.667,266.666   c147.275,0,266.667-119.391,266.667-266.666C533.333,119.391,413.942,0,266.667,0z M266.667,483.333   C147.005,483.333,50,386.328,50,266.667C50,147.005,147.005,50,266.667,50c119.661,0,216.667,97.005,216.667,216.667   C483.333,386.328,386.328,483.333,266.667,483.333z M166.667,166.667h66.667v200h-66.667V166.667z M300,166.667h66.667v200H300   V166.667z"/>
+              </svg>
+            </div>
           </div>
-          <div id="scrollspy" class="democontent" controls>
-            <video autoplay loop preload="auto">
+          <div id="scrollspy" class="democontent">
+            <video controls>
               <source src="./demo/scrollspy.mp4" type="video/mp4">
             </video>
+            <div class="playpause play">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="play" x="0px" y="0px" viewBox="0 0 314.068 314.068" style="enable-background:new 0 0 314.068 314.068;" xml:space="preserve">
+                <path d="M293.002,78.53C249.646,3.435,153.618-22.296,78.529,21.068C3.434,64.418-22.298,160.442,21.066,235.534     c43.35,75.095,139.375,100.83,214.465,57.47C310.627,249.639,336.371,153.62,293.002,78.53z M219.834,265.801     c-60.067,34.692-136.894,14.106-171.576-45.973C13.568,159.761,34.161,82.935,94.23,48.26     c60.071-34.69,136.894-14.106,171.578,45.971C300.493,154.307,279.906,231.117,219.834,265.801z M213.555,150.652l-82.214-47.949     c-7.492-4.374-13.535-0.877-13.493,7.789l0.421,95.174c0.038,8.664,6.155,12.191,13.669,7.851l81.585-47.103     C221.029,162.082,221.045,155.026,213.555,150.652z"/>
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="pause" x="0px" y="0px" viewBox="0 0 533.333 533.333" style="enable-background:new 0 0 533.333 533.333;" xml:space="preserve">
+                <path d="M266.667,0C119.391,0,0,119.391,0,266.667c0,147.275,119.391,266.666,266.667,266.666   c147.275,0,266.667-119.391,266.667-266.666C533.333,119.391,413.942,0,266.667,0z M266.667,483.333   C147.005,483.333,50,386.328,50,266.667C50,147.005,147.005,50,266.667,50c119.661,0,216.667,97.005,216.667,216.667   C483.333,386.328,386.328,483.333,266.667,483.333z M166.667,166.667h66.667v200h-66.667V166.667z M300,166.667h66.667v200H300   V166.667z"/>
+              </svg>
+            </div>
           </div>
-          <div id="parallaxscroll" class="democontent" controls>
-            <video autoplay loop preload="auto">
+          <div id="parallaxscroll" class="democontent">
+            <video controls>
               <source src="./demo/parallaxscroll.mp4" type="video/mp4">
             </video>
+            <div class="playpause play">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="play" x="0px" y="0px" viewBox="0 0 314.068 314.068" style="enable-background:new 0 0 314.068 314.068;" xml:space="preserve">
+                <path d="M293.002,78.53C249.646,3.435,153.618-22.296,78.529,21.068C3.434,64.418-22.298,160.442,21.066,235.534     c43.35,75.095,139.375,100.83,214.465,57.47C310.627,249.639,336.371,153.62,293.002,78.53z M219.834,265.801     c-60.067,34.692-136.894,14.106-171.576-45.973C13.568,159.761,34.161,82.935,94.23,48.26     c60.071-34.69,136.894-14.106,171.578,45.971C300.493,154.307,279.906,231.117,219.834,265.801z M213.555,150.652l-82.214-47.949     c-7.492-4.374-13.535-0.877-13.493,7.789l0.421,95.174c0.038,8.664,6.155,12.191,13.669,7.851l81.585-47.103     C221.029,162.082,221.045,155.026,213.555,150.652z"/>
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="pause" x="0px" y="0px" viewBox="0 0 533.333 533.333" style="enable-background:new 0 0 533.333 533.333;" xml:space="preserve">
+                <path d="M266.667,0C119.391,0,0,119.391,0,266.667c0,147.275,119.391,266.666,266.667,266.666   c147.275,0,266.667-119.391,266.667-266.666C533.333,119.391,413.942,0,266.667,0z M266.667,483.333   C147.005,483.333,50,386.328,50,266.667C50,147.005,147.005,50,266.667,50c119.661,0,216.667,97.005,216.667,216.667   C483.333,386.328,386.328,483.333,266.667,483.333z M166.667,166.667h66.667v200h-66.667V166.667z M300,166.667h66.667v200H300   V166.667z"/>
+              </svg>
+            </div>
           </div>
         </div>
         <div id="opendemo">
